fix thumblist height so it doesnt go off screen

--- a/src/scss/components/_lightbox.scss
+++ b/src/scss/components/_lightbox.scss
@@ -83,7 +83,7 @@
   top: 8rem;
   right: 0;
   overflow-y: auto;
-  max-height: calc(100vh - 80px);
+  max-height: calc(100vh - 8rem);
   display: none;
 
   @include media(lg) {
